feat: user info and followers, followings

--- a/script/1.generate.meta.tasks.ipynb
+++ b/script/1.generate.meta.tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "└─────────────┴────────────┴────────────┴────────────┴────────────┴───────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "base_url = \"https://huggingface.co/user/\"\n",
+    "base_url = \"https://huggingface.co/\"\n",
     "user_names = df[\"author\"].unique().to_list()\n",
     "user_names = [x for x in user_names if x is not None]\n",
     "user_names = [x for x in user_names if x != \"None\"]\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -173,32 +173,32 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "530a1c28-3893-47e3-9ffe-9cf99ded5f6a",
+       "ref": "1b85244e-017a-42aa-9bdb-4bf6464b8f41",
        "rows": [
         [
          "0",
-         "aman2304",
-         "https://huggingface.co/user/aman2304"
+         "crossdelenna",
+         "https://huggingface.co/crossdelenna"
         ],
         [
          "1",
-         "anonymous-german-nlp",
-         "https://huggingface.co/user/anonymous-german-nlp"
+         "Teetouch",
+         "https://huggingface.co/Teetouch"
         ],
         [
          "2",
-         "jinlmsft",
-         "https://huggingface.co/user/jinlmsft"
+         "Janouille",
+         "https://huggingface.co/Janouille"
         ],
         [
          "3",
-         "ltorrick",
-         "https://huggingface.co/user/ltorrick"
+         "orestxherija",
+         "https://huggingface.co/orestxherija"
         ],
         [
          "4",
-         "LDD",
-         "https://huggingface.co/user/LDD"
+         "edmundhui",
+         "https://huggingface.co/edmundhui"
         ]
        ],
        "shape": {
@@ -232,43 +232,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>aman2304</td>\n",
-       "      <td>https://huggingface.co/user/aman2304</td>\n",
+       "      <td>crossdelenna</td>\n",
+       "      <td>https://huggingface.co/crossdelenna</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>anonymous-german-nlp</td>\n",
-       "      <td>https://huggingface.co/user/anonymous-german-nlp</td>\n",
+       "      <td>Teetouch</td>\n",
+       "      <td>https://huggingface.co/Teetouch</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>jinlmsft</td>\n",
-       "      <td>https://huggingface.co/user/jinlmsft</td>\n",
+       "      <td>Janouille</td>\n",
+       "      <td>https://huggingface.co/Janouille</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ltorrick</td>\n",
-       "      <td>https://huggingface.co/user/ltorrick</td>\n",
+       "      <td>orestxherija</td>\n",
+       "      <td>https://huggingface.co/orestxherija</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>LDD</td>\n",
-       "      <td>https://huggingface.co/user/LDD</td>\n",
+       "      <td>edmundhui</td>\n",
+       "      <td>https://huggingface.co/edmundhui</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   user                                               url\n",
-       "0              aman2304              https://huggingface.co/user/aman2304\n",
-       "1  anonymous-german-nlp  https://huggingface.co/user/anonymous-german-nlp\n",
-       "2              jinlmsft              https://huggingface.co/user/jinlmsft\n",
-       "3              ltorrick              https://huggingface.co/user/ltorrick\n",
-       "4                   LDD                   https://huggingface.co/user/LDD"
+       "           user                                  url\n",
+       "0  crossdelenna  https://huggingface.co/crossdelenna\n",
+       "1      Teetouch      https://huggingface.co/Teetouch\n",
+       "2     Janouille     https://huggingface.co/Janouille\n",
+       "3  orestxherija  https://huggingface.co/orestxherija\n",
+       "4     edmundhui     https://huggingface.co/edmundhui"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,13 +280,6 @@
     "df_users.to_csv(df_users_path, index=False)\n",
     "df_users.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
