--- a/notebook/0.social.network.ipynb
+++ b/notebook/0.social.network.ipynb
@@ -2103,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2868,7 +2868,9 @@
    "source": [
     "# save the graph as a pdf \n",
     "pdf_path = \"../output/figure/network.pdf\"\n",
-    "ig.plot(g, pdf_path, bbox=(0, 0, 800, 800), vertex_size=5, vertex_label_size=5, edge_arrow_size=0.5, edge_width=0.5)"
+    "ig.plot(g, pdf_path, bbox=(0, 0, 800, 800), vertex_size=5, vertex_label_size=5, edge_arrow_size=0.5, edge_width=0.5)\n",
+    "png_path = \"../output/figure/network.png\"\n",
+    "ig.plot(g, png_path, bbox=(0, 0, 800, 800), vertex_size=5, vertex_label_size=5, edge_arrow_size=0.5, edge_width=0.5)"
    ]
   },
   {
